# EPIC

./: .env.example  .gitignore  COVER_DOCUMENT.md  NETWORK_REPORT.md  README.md  crypto-design.md  crypto_setup.txt  docker-compose.yml
.claude/: settings.json  settings.local.json
backend/: .env.example  Dockerfile  alembic.ini  main.py  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 8662fc698943_add_identity_keys_to_users.py  a1b2c3d4e5f6_signal_protocol_and_blockchain_registry.py  a7b8c9d0e1f2_one_time_prekey_key_id_bigint.py  aaaa00000001_merge_feat_and_main_heads.py  b1c2d3e4f5a6_add_deleted_for_sender_to_messages.py  c8d9e0f1a2b3_add_blockchain_batch_index_to_messages.py  cc22dd33ee44_add_client_type_to_users.py  d1e2f3a4b5c6_add_forwarding_and_revocation.py  e32ea88cfd28_initial_schema.py  ee9a6e06e815_stub.py  f4a5b6c7d8e9_replace_revocation_with_deleted_for_recipient.py  ffff00000000_merge_migration_heads.py
backend/app/: config.py  database.py
backend/app/middleware/: csrf.py  security_headers.py
backend/app/models/: __init__.py  message.py  revocation.py  signal.py  user.py
backend/app/routers/: auth.py  blockchain.py  messages.py  ws.py
backend/app/schemas/: auth.py  message.py
backend/app/services/: auth_service.py  blockchain_service.py  rate_limit.py  redis_service.py  ws_manager.py
backend/frontend/: app.js  crypto.js  index.html  register.js  styles.css
blockchain/: .env.example  MessageDigestRegistryABI.json  deployedAddress.json  digestRecorder.js  hardhat.config.js  package-lock.json  package.json  recordDigestCli.js  verifyDigestCli.js
blockchain/contracts/: MessageDigest.sol  MessageDigestRegistry.sol
blockchain/scripts/: deploy.js  deployRegistry.js
blockchain/test/: MessageDigest.test.js
client-cpp/: .gitignore  CMakeLists.txt  README.md
client-cpp/build-47292/: .ninja_deps  .ninja_log  SecureMsg.exe.manifest  build.ninja  cmake_install.cmake
client-cpp/build-47292/.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
client-cpp/build-47292/SecureMsg_autogen/: deps  moc_predefs.h  mocs_compilation.cpp
client-cpp/build-47292/SecureMsg_autogen/UVLADIE3JM/: moc_LoginWindow.cpp  moc_LoginWindow.cpp.d  moc_MainWindow.cpp  moc_MainWindow.cpp.d  moc_MessageStore.cpp  moc_MessageStore.cpp.d
client-cpp/src/: Client.cpp  Client.hpp  CryptoDaemonClient.cpp  CryptoDaemonClient.hpp  LoginWindow.cpp  LoginWindow.hpp  MainWindow.cpp  MainWindow.hpp  Message.cpp  Message.hpp  MessageItemDelegate.cpp  MessageItemDelegate.hpp  MessageStore.cpp  MessageStore.hpp  NetworkUtils.cpp  NetworkUtils.hpp  TLSVerifier.cpp  TLSVerifier.hpp  TofuStore.cpp  TofuStore.hpp  User.cpp  User.hpp  main.cpp
crypto-daemon/: README.md  double_ratchet.py  handlers.py  identity.py  main.py  session_store.py  test_daemon.py  transport.py  x3dh.py
docs/: AI_ARTEFACTS.md  CRYPTO_DESIGN.md
documentation/: JuliaHooperAIartefact.md  cover_document.md  holly_best_ai_usage_log.md  network_architecture.md  network_architecture.puml
documentation/Matthew AI Artefacts/: Main AI prompts.docx
frontend/: app.js  crypto.js  index.html  register.html  register.js  styles.css  verify.html  verify.js
pentest/: requirements.txt  run_tests.py
pentest/report/: pentest_report.md  pentest_report_2.md
pentest/tests/: test_access_control.py  test_auth.py  test_components.py  test_csrf.py  test_injection.py  test_security_headers.py  test_sensitive_data.py
